--- a/src/mybot_gazebo/mybot_description/package.xml
+++ b/src/mybot_gazebo/mybot_description/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>mybot_gazebo</name>
+  <name>mybot_description</name>
   <version>0.0.0</version>
-  <description>The mybot_gazebo package</description>
+  <description>The mybot_description package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/mybot_gazebo</url> -->
+  <!-- <url type="website">http://wiki.ros.org/mybot_description</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,8 +40,6 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>gazebo_ros</build_depend>
-  <run_depend>gazebo_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
